Enable to delete tag from a given company
The function revomeOneTag will remove the tag from the company (by mongodb `$pull`), and return the company.

Note that if you remove a nonexistent tag, or remove a tag which is not included by the company, you still get 200 and the company information.
